--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="stylesheet" href="../src/App.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,12 +26,72 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>React App</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <button type="button" class="touse">Test</button>
+  <div class="App App-header" id="root">
+    <h1>
+      Simple expense manager
+    </h1>
+    <div class="form-inline">
+
+      <label for="payment-type" class="form-label">Type: </label>
+      <select class="form-input" name="payment-type">
+        <option value="first" data-icon="glyphicon glyphicon-credit-card" selected>Cash
+        </option>
+        <option value="second" data-icon="glyphicon glyphicon-credit-card">Card
+        </option>
+        <option value="third">Cryptocurrency</option>
+        <option value="third">Other</option>
+      </select>
+      <label for="spend-desc" class="form-label">Name: </label>
+      <input type="dropdown" class="form-input" id="spend-desc" name="spend-desc" placeholder="What you spent on">
+
+    </div>
+
+    <div class="form-inline">
+
+      <label class="form-label" for="date-spent">Date</label>
+      <input type="text" class="form-input" id="date-spent" name="date-spent">
+      <label for="amount-spent">Amount: </label>
+      <input type="dropdown" class="form-input" id="amount-spent" name="amount-spent">
+
+    </div>
+
+    <div class="form-inline">
+      <button type="button" class="add-button btn btn-primary btn-lg">Add a new expense</button>
+    </div>
+
+    <div class="form-inline">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th colspan="4">LIST OF YOUR EXPENSES</th>
+          </tr>
+        </thead>
+        <tr>
+          <td>
+            First
+          </td>
+          <td>
+            First
+          </td>
+          <td>
+            First
+          </td>
+          <td>
+            First
+          </td>
+        </tr>
+      </table>
+    </div>
+
+
+  </div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -39,5 +101,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
