--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="../src/App.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -36,10 +37,10 @@
     <h1>
       Simple expense manager
     </h1>
-    <div class="form-inline">
+    <div class="form-inline form-group">
 
       <label for="payment-type" class="form-label">Type: </label>
-      <select class="form-input" name="payment-type">
+      <select class="form-input" name="payment-type" id="payment-type">
         <option value="first" data-icon="glyphicon glyphicon-credit-card" selected>Cash
         </option>
         <option value="second" data-icon="glyphicon glyphicon-credit-card">Card
@@ -52,45 +53,22 @@
 
     </div>
 
-    <div class="form-inline">
+    <div class="form-inline form-group">
 
       <label class="form-label" for="date-spent">Date</label>
-      <input type="text" class="form-input" id="date-spent" name="date-spent">
+      <input type="text" class="form-input" id="datepicker" name="date-spent">
       <label for="amount-spent">Amount: </label>
-      <input type="dropdown" class="form-input" id="amount-spent" name="amount-spent">
+      <input type="dropdown" class="form-input" id="amount-spent" name="amount-spent" required>
 
     </div>
 
     <div class="form-inline">
-      <button type="button" class="add-button btn btn-primary btn-lg">Add a new expense</button>
+      <button type="button" class="add-button btn btn-primary btn-lg" id="add-expense-btn">Add a new expense</button>
     </div>
-
-    <div class="form-inline">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th colspan="4">LIST OF YOUR EXPENSES</th>
-          </tr>
-        </thead>
-        <tr>
-          <td>
-            First
-          </td>
-          <td>
-            First
-          </td>
-          <td>
-            First
-          </td>
-          <td>
-            First
-          </td>
-        </tr>
-      </table>
-    </div>
-
+    <div class="form-inline" id="expense-table"></div>
 
   </div>
+
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -101,15 +79,20 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+  <script>
+    $(function () {
+      $("#datepicker").datepicker();
+    });
+  </script>
+
 </body>
 
 </html>
